src/prompts/snapshots/promptuity__prompts__input__tests__default.snap
---
source: src/prompts/input.rs
---
state: Active
message: test message
hint: none
placeholder: none
input(cursor): | 
body(none):
---
state: Active
input(cursor): a| 
body(none):
---
state: Active
input(cursor): ab| 
body(none):
---
state: Active
input(cursor): abc| 
body(none):
---
state: Active
input(cursor): ab|c
body(none):
---
state: Active
input(cursor): a|bc
body(none):
---
state: Active
input(cursor): |abc
body(none):
---
state: Submit
input(cursor): |abc
body(none):
