src/prompts/snapshots/promptuity__prompts__input__tests__hint.snap
---
source: src/prompts/input.rs
---
state: Active
message: test message
hint: hint message
placeholder: none
input(cursor): | 
body(none):
