src/prompts/snapshots/promptuity__prompts__input__tests__non_required_empty_submit.snap
---
source: src/prompts/input.rs
---
state: Active
message: test message
hint: none
placeholder: none
input(cursor): | 
body(none):
---
state: Submit
input(cursor): | 
body(none):
