src/prompts/snapshots/promptuity__prompts__input__tests__placeholder.snap
---
source: src/prompts/input.rs
---
state: Active
message: test message
hint: none
placeholder: placeholder message
input(cursor): | 
body(none):
